2008-02-21  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-04 
	* Fixes to allow propor behavior for file sizes greater than 2GB, and to
	  make the cfg file specify the max file size in MBytes instead of bytes.

2008-02-11  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-03 
	* Support for SMProxyServer as a special consumer when we have multiple
	  HLT output modules.

2008-02-02  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-02 
        * New version of SMPerformanceMeterfor thread safety so SMProxyServer can
          use this for both incoming and outgoing statistics when in pull mode
        * Modified StorageManager to use this new version and test XML config to
          set SMProxyServer parameters

2008-01-30  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-00 Changes to handle multiple output modules in the HLT processes

2008-01-28  Harry Cheung <cheung@fnal.gov>

	* tag V03-08-03 (Don't know what changed in V03-08-02! Probably framework changes)
	* Fix bug in DQMConsumerPipe, and using priority=PushMode for pushmode
	* Set pushmode to false in example XML config files

2007-12-12  Harry Cheung <cheung@fnal.gov>

	* tag V03-08-01 (no entries made for previous tags! Lump all changes here))
	* Updated consumer queues with real queues and changed default size
        * Handle consumers asking for non-existent trigger names
        * Add a consumer web app page for monitoring
        * Updated for framework changes

2007-10-23  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-10
	* Fix of DQMInstance.cc from Billbadgett for number of digits for run and
          lumi numbers, same convention as for event data files. Also to chmod to
          DQM output root files to make them world readable.

2007-10-18  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-09
	* Fixed ConsumerPipe to avoid 2 sec/event delay in pushing events to the
          SMProxyServer, and also fix intermittent hang in pushing events when
          curl tries to reuse a dead connection
