@@ -1,7 +1,7 @@
 #ifndef STREAMSERVICE_H
 #define STREAMSERVICE_H
 
-// $Id: StreamService.h,v 1.3 2007/08/18 06:04:56 hcheung Exp $
+// $Id: StreamService.h,v 1.4 2008/02/21 14:17:41 biery Exp $
 
 // - handling output files per stream make the problem 1-dimensional 
 // - allows to use different file handling rules per stream
@@ -26,6 +26,8 @@
 #include "EventFilter/StorageManager/interface/OutputService.h"  
 
 #include <boost/shared_ptr.hpp>
+#include "boost/thread/thread.hpp"
+
 #include <string>
 #include <map>
 
@@ -103,6 +105,10 @@ namespace edm {
       long long maxSize_;
       double highWaterMark_;
       double lumiSectionTimeOut_;
+
+      //@@EM added lock to handle access to file list by monitoring loop
+      boost::mutex list_lock_;
+
      };
 
 } // edm namespace
